--- a/app/src/main/res/layout/content_about.xml
+++ b/app/src/main/res/layout/content_about.xml
@@ -17,6 +17,6 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="50dp"
-        android:text="This app was created by Avi Cohen and Itamar Shubin."
+        android:text="This app was created and edited by Avi Cohen and Itamar Shubin."
         android:textSize="50sp" />
 </RelativeLayout>
